--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <meta name="description" content="Portfolio of Sambo Sopheakline, a Computer Science student at CADT. Explore my projects, skills, education, and contact information.">
   <meta name="keywords" content="Sambo Sopheakline, Portfolio, CADT, Web Developer, Projects, Cambodia, Computer Science, Software Engineering, Resume, Contact">
   <meta name="author" content="Sambo Sopheakline">
-  <link rel="canonical" href="https://yourdomain.com/">
+  <link rel="canonical" href="https://celebrated-tulumba-2b5c2c.netlify.app/">
   <meta property="og:title" content="Sambo Sopheakline | Portfolio, Projects & Contact">
   <meta property="og:description" content="Portfolio of Sambo Sopheakline, a Computer Science student at CADT. Explore my projects, skills, education, and contact information.">
-  <meta property="og:image" content="https://yourdomain.com/assets/img/my-profile-img.jpg">
-  <meta property="og:url" content="https://yourdomain.com/">
+  <meta property="og:image" content="https://celebrated-tulumba-2b5c2c.netlify.app/assets/img/my-profile-img.jpg">
+  <meta property="og:url" content="https://celebrated-tulumba-2b5c2c.netlify.app/">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Sambo Sopheakline | Portfolio, Projects & Contact">
   <meta name="twitter:description" content="Portfolio of Sambo Sopheakline, a Computer Science student at CADT. Explore my projects, skills, education, and contact information.">
-  <meta name="twitter:image" content="https://yourdomain.com/assets/img/my-profile-img.jpg">
+  <meta name="twitter:image" content="https://celebrated-tulumba-2b5c2c.netlify.app/assets/img/my-profile-img.jpg">
   <link rel="icon" href="assets/img/favicon.png">
   <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
   <link rel="manifest" href="manifest.json">
@@ -37,6 +37,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <meta name="google-site-verification" content="_7DTduSyQYGeMJ7Mcqx7E9B-8moIn-Q6B_5P-BTYSLg" />
 </head>
 
 <body class="index-page">
@@ -660,8 +661,8 @@
   "@context": "https://schema.org",
   "@type": "Person",
   "name": "Sambo Sopheakline",
-  "url": "https://yourdomain.com/",
-  "image": "https://yourdomain.com/assets/img/my-profile-img.jpg",
+  "url": "https://celebrated-tulumba-2b5c2c.netlify.app/",
+  "image": "https://celebrated-tulumba-2b5c2c.netlify.app/assets/img/my-profile-img.jpg",
   "sameAs": [
     "https://x.com/terikuza",
     "https://web.facebook.com/sopheaklyne.sambo/",
@@ -681,4 +682,4 @@
 
 User-agent: *
 Allow: /
-Sitemap: https://yourdomain.com/sitemap.xml
+Sitemap: https://celebrated-tulumba-2b5c2c.netlify.app/sitemap.xml
