--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:description" content="Portfolio of Sambo Sopheakline, a Computer Science student at CADT. Explore my projects, skills, education, and contact information.">
   <meta name="twitter:image" content="https://celebrated-tulumba-2b5c2c.netlify.app/assets/img/my-profile-img.jpg">
   <link rel="icon" href="assets/img/favicon.png">
-  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">.
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#149ddd">
 
