--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sambo Sopheakline | Portfolio, Projects & Contact</title>
   <meta name="description" content="Portfolio of Sambo Sopheakline, a Computer Science student at CADT. Explore my projects, skills, education, and contact information.">
-  <meta name="keywords" content="Sambo Sopheakline, Portfolio, CADT, Web Developer, Projects, Cambodia, Computer Science, Software Engineering, Resume, Contact">
+  <meta name="keywords" content="Sambo Sopheakline, Portfolio, CADT, Web Developer, Projects, Cambodia, Computer Science, Software Engineering, Resume, Contact, sopheakline">
   <meta name="author" content="Sambo Sopheakline">
   <link rel="canonical" href="https://celebrated-tulumba-2b5c2c.netlify.app/">
   <meta property="og:title" content="Sambo Sopheakline | Portfolio, Projects & Contact">
@@ -37,7 +37,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-  <meta name="google-site-verification" content="_7DTduSyQYGeMJ7Mcqx7E9B-8moIn-Q6B_5P-BTYSLg" />
+  <meta name="google-site-verification" content="_7DTduSyQYGeMJ7Mcqx7E9B-8moIn-Q6B_5P-BTYSLg"/>
 </head>
 
 <body class="index-page">
@@ -674,6 +674,16 @@
     "name": "Cambodia Academy of Digital Technology (CADT)"
   }
 }
+</script>
+
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(reg => console.log('Service Worker registered:', reg))
+        .catch(err => console.log('Service Worker registration failed:', err));
+    });
+  }
 </script>
 </body>
 
