--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:description" content="Portfolio of Sambo Sopheakline, a Computer Science student at CADT. Explore my projects, skills, education, and contact information.">
   <meta name="twitter:image" content="https://celebrated-tulumba-2b5c2c.netlify.app/assets/img/my-profile-img.jpg">
   <link rel="icon" href="assets/img/favicon.png">
-  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">.
+  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#149ddd">
 
@@ -247,6 +247,46 @@
         </div>
       </div>
 
+      <!-- React Skill -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow border-0 h-100 skill-card position-relative overflow-hidden">
+          <div class="card-body text-center">
+            <div class="skill-icon mb-3">
+              <i class="bi bi-react fs-1" style="color:#61dafb"></i>
+            </div>
+            <h5 class="card-title mb-2">React</h5>
+            <div class="circular-progress mx-auto mb-2" data-percentage="75">
+              <svg width="80" height="80">
+                <circle cx="40" cy="40" r="35" stroke="#e9ecef" stroke-width="8" fill="none"/>
+                <circle cx="40" cy="40" r="35" stroke="#61dafb" stroke-width="8" fill="none" stroke-dasharray="220" stroke-dashoffset="55"/>
+              </svg>
+              <span class="progress-value">75%</span>
+            </div>
+            <p class="text-muted small">Components, Hooks, SPA</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Laravel Skill -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow border-0 h-100 skill-card position-relative overflow-hidden">
+          <div class="card-body text-center">
+            <div class="skill-icon mb-3">
+              <i class="bi bi-layers fs-1" style="color:#ff2d20"></i>
+            </div>
+            <h5 class="card-title mb-2">Laravel</h5>
+            <div class="circular-progress mx-auto mb-2" data-percentage="70">
+              <svg width="80" height="80">
+                <circle cx="40" cy="40" r="35" stroke="#e9ecef" stroke-width="8" fill="none"/>
+                <circle cx="40" cy="40" r="35" stroke="#ff2d20" stroke-width="8" fill="none" stroke-dasharray="220" stroke-dashoffset="66"/>
+              </svg>
+              <span class="progress-value">70%</span>
+            </div>
+            <p class="text-muted small">MVC, REST API, Authentication</p>
+          </div>
+        </div>
+      </div>
+
       <!-- Add more skills as needed -->
 
     </div>
@@ -290,7 +330,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Computer science student at CADT university with a strong foundation in computer science and software engineering, with experience inachieving tangible results and cross-team collaboration with strengthenabilities, responsibility andentrepreneurial mindset.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -431,7 +471,7 @@
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>Education</h2>
-    <p>Computer science student at CADT with a strong foundation in computer science and software engineering, with experience inachieving tangible results and cross-team collaboration with strengthenabilities, responsibility andentrepreneurial mindset.</p>
+    <p>Computer science student at CADT university with a strong foundation in computer science and software engineering, with experience inachieving tangible results and cross-team collaboration with strengthenabilities, responsibility andentrepreneurial mindset.</p>
   </div><!-- End Section Title -->
 
   <div class="container">
@@ -622,13 +662,6 @@
     <div class="container">
       <div class="copyright text-center ">
         <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
       </div>
     </div>
 
